<resources>
    <string name="app_name">acompanhamentoOdonto</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cartilha_title">Cartilha</string>
    <string name="quiz_title">Quiz</string>
    <string name="destaque_title">Destaque</string>
    <string name="covid_title">Covid-19</string>
    <string name="agosto_dourado_title">Agosto Dourado</string>
    <string name="quem_somos_title">Quem Somos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_mostrar_perguntas">Mostrar todas</string>
    <string name="verdadeiro">Verdadeiro</string>
    <string name="falso">Falso</string>
    <string name="exemplo_pergunta">A envergadura de uma asa de um Boeing 747 é maior que o primeiro voo dos irmãos Wright</string>
    <string name="exemplo_pergunta2">Boeing 747 é uma aeronave a jato usada no âmbito civil e militar para transporte de passageiros e de carga, referida com frequência como Jumbo Jet ou Queen of the Skies (Rainha dos Céus). A sua corcunda na parte superior frontal da fuselagem faz com que seja uma das aeronaves mais reconhecíveis do mundo</string>
</resources>